Font Size and Mobile Spacing Fix
Font Size and Mobile Spacing Fix

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -47,10 +47,9 @@ body {
 }
 
 .logo-wrapper {
-    max-width: 300px;
+    max-width: 200px;
     max-height: 150px;
     width: 100%;
-    margin-bottom: 50px;
 
     img {
         max-width: 100%;
@@ -62,6 +61,10 @@ body {
     max-width: 150px;
     top: 20px;
     left: 50px;
+
+    @media screen and (max-width: 768px) {
+        left: 25px;
+    }
 }
 
 /* Accordion Style */
@@ -72,6 +75,10 @@ body {
         font-weight: 600;
         color: $acc-dark;
         text-align: center;
+
+        @media screen and (max-width: 768px) {
+            font-size: 28px;
+        }
     }
 
     &-items {
@@ -281,6 +288,14 @@ body {
     padding: 100px;
     background-color: _palette(fg-bold);
 
+    @media screen and (max-width: 1024px) {
+        padding: 100px 50px;
+    }
+
+    @media screen and (max-width: 768px) {
+        padding: 100px 25px;
+    }
+
     .accordion-container {
         width: 100%;
         max-width: 1000px;
@@ -298,6 +313,10 @@ body {
             font-weight: 500;
             color: $white;
             text-align: left;
+
+            @media screen and (max-width: 540px) {
+                font-size: 24px;
+            }
         }
 
         &-items {
