--- a/assets/sass/components/_wrapper.scss
+++ b/assets/sass/components/_wrapper.scss
@@ -17,7 +17,7 @@
 		}
 
 		@include breakpoint('<=small') {
-			@include padding(3em, 2em);
+			@include padding(3em, 1.25em);
 		}
 	}
 
